[project]
name = "prctl"
version = "0.2.0"
description = "PR-workflow helper CLI — mechanical glue over gh and git for review, merge, and stack workflows."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "xlyk" }]
dependencies = ["typer>=0.12"]

[project.scripts]
prctl = "prctl.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prctl"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.15",
    "ty>=0.0.1",
    "pre-commit>=4",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
